<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintEnd_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/textView5"
                    app:srcCompat="@drawable/play_svgrepo_com" />

                <VideoView
                    android:id="@+id/previewView_main"
                    android:layout_width="260dp"
                    android:layout_height="360dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="-6dp"
                    android:layout_marginBottom="25dp"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:progressTint="@color/black"
                    android:thumb="@drawable/seekbar_thumb"
                    app:layout_constraintBottom_toBottomOf="@+id/previewView_main"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/total_video"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                    app:layout_constraintEnd_toEndOf="@+id/previewView_main"
                    app:layout_constraintTop_toTopOf="@+id/seekBar" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-6dp"
                    android:text="@string/time_start_video"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                    app:layout_constraintStart_toStartOf="@+id/previewView_main"
                    app:layout_constraintTop_toTopOf="@+id/seekBar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="38dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/dark_gray"
                        android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                        android:text="@string/cancel" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                        android:text="@string/setting" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_edit_video"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="22dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_white_line_red"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                        android:text="@string/edit" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="70dp"
                android:layout_marginHorizontal="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/bg_white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginVertical="35dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/description_edit_video"
                    android:textSize="12sp"
                    android:lineSpacingExtra="8dp"
                    android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>