<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".EditVideoActivity">

    <VideoView
        android:id="@+id/previewView_edit"
        android:layout_width="0dp"
        android:layout_height="540dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/text_view_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/previewView_edit"
        app:layout_constraintEnd_toEndOf="@+id/previewView_edit"
        app:layout_constraintStart_toStartOf="@+id/previewView_edit"
        app:layout_constraintTop_toTopOf="@+id/previewView_edit" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/previewView_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/previewView_edit"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <LinearLayout
        android:id="@+id/ll_confirm_edit_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_red_edit_video"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/previewView_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/previewView_edit">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
            android:text="@string/button_edit_video"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp">

                <LinearLayout
                    android:id="@+id/ll_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                            android:text="Cỡ chữ : "
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            app:layout_constraintBottom_toBottomOf="@+id/textView10"
                            app:layout_constraintStart_toEndOf="@+id/textView10"
                            app:layout_constraintTop_toTopOf="@+id/textView10"
                            app:srcCompat="@drawable/baseline_remove_24" />

                        <TextView
                            android:id="@+id/textView32"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                            android:text="16"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/imageView" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="@+id/textView32"
                            app:layout_constraintStart_toEndOf="@+id/textView32"
                            app:layout_constraintTop_toTopOf="@+id/textView32"
                            app:srcCompat="@drawable/baseline_add_24" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                            android:text="Màu chữ :"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="@+id/textView10"
                            app:layout_constraintTop_toBottomOf="@+id/textView10" />

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                            android:text="Kiểu chữ :"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="@+id/textView23"
                            app:layout_constraintTop_toBottomOf="@+id/textView23" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w6"
                            android:text="Nội dung :"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            app:layout_constraintStart_toStartOf="@+id/textView30"
                            app:layout_constraintTop_toBottomOf="@+id/textView30" />

                        <EditText
                            android:id="@+id/editTextText"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@color/dark_gray"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="@+id/textView31"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/textView31" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcv_color"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="@+id/textView23"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/textView23"
                            tools:itemCount="10"
                            tools:listitem="@layout/item_color" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_edite_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/btn_action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_item_edit_video"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/imageView51"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/beauty_spa_towel_user_woman_svgrepo_com" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView71"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                            android:text="@string/item_action"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/btn_filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_item_edit_video"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/imageView52"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/circle_svgrepo_com" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView72"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                            android:text="@string/item_filter"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/btn_sticker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_item_edit_video"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/imageView53"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/face_smile_svgrepo_com" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView73"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                            android:text="@string/item_stickers"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/btn_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_item_edit_video"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/imageView54"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/text_size_svgrepo_com" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView74"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/hiragino_kaku_gothic_pro_w3"
                            android:text="@string/item_text"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>